# grok-oss

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FORK.md  README.md  RESIDUAL.md  SECURITY.md  flake.nix  justfile
.agents/plans/: plan-prevent-unsigned-commits.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  upstream-export.yml
crates/codegen/cargo-mem-guard/: Cargo.toml
crates/codegen/cargo-mem-guard/src/: main.rs
crates/codegen/grok-bitcoin-wallet/: Cargo.toml  README.md
crates/codegen/grok-bitcoin-wallet/src/: cashu.rs  descriptor_wallet.rs  explorer.rs  funding_cli.rs  lib.rs  lightning.rs  onchain.rs  watcher.rs
crates/codegen/grok-rate-limit/: Cargo.toml
crates/codegen/grok-rate-limit/src/: lib.rs  store.rs
crates/codegen/ptyctl/: Cargo.toml
crates/codegen/ptyctl-cli/: Cargo.toml
crates/codegen/xai-chat-state/src/: types.rs
crates/codegen/xai-codebase-graph/tests/: memory_integration.rs
crates/codegen/xai-fast-worktree/src/: auto_gc.rs
crates/codegen/xai-file-utils/src/: queue.rs
crates/codegen/xai-grok-agent/src/: compaction.rs
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-config/src/: shell.rs  signed_policy.rs
crates/codegen/xai-grok-env/: Cargo.toml
crates/codegen/xai-grok-markdown/: Cargo.toml
crates/codegen/xai-grok-markdown/fuzz/: Cargo.toml
crates/codegen/xai-grok-memory/: Cargo.toml
crates/codegen/xai-grok-mermaid/: Cargo.toml
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-pager/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-bin/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-minimal/: Cargo.toml
crates/codegen/xai-grok-pager-minimal/src/: commit.rs
crates/codegen/xai-grok-pager-pty-harness/: Cargo.toml
crates/codegen/xai-grok-pager-pty-harness/src/: env.rs
crates/codegen/xai-grok-pager-render/: Cargo.toml
crates/codegen/xai-grok-pager-render/src/: lib.rs  prompt_images.rs
crates/codegen/xai-grok-pager/src/: client_identity.rs  headless.rs  lib.rs  mcp_cmd.rs  plugin_cmd.rs  trace_cmd.rs
crates/codegen/xai-grok-pager/tests/: settings_e2e.rs
crates/codegen/xai-grok-plugin-marketplace/src/: git.rs  installer.rs
crates/codegen/xai-grok-sampler/: Cargo.toml
crates/codegen/xai-grok-sampler/src/: client.rs  config.rs  lib.rs  retry.rs
crates/codegen/xai-grok-sampler/tests/: test_actor.rs
crates/codegen/xai-grok-sampling-types/src/: conversation.rs  error.rs
crates/codegen/xai-grok-sandbox/: Cargo.toml
crates/codegen/xai-grok-shared/src/: ui_config.rs
crates/codegen/xai-grok-shell/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/xai-grok-shell-base/: Cargo.toml
crates/codegen/xai-grok-shell-base/src/: cpu_profile.rs
crates/codegen/xai-grok-shell/src/: cli_models.rs
crates/codegen/xai-grok-shell/tests/: openrouter_attribution.rs  openrouter_credentials.rs  signed_managed_config_extended.rs
crates/codegen/xai-grok-test-support/: README.md
crates/codegen/xai-grok-test-support/src/: env.rs
crates/codegen/xai-grok-update/: Cargo.toml
crates/codegen/xai-grok-update/src/: auto_update.rs  lib.rs  oss_update.rs
crates/codegen/xai-grok-workspace/: Cargo.toml
crates/codegen/xai-grok-workspace/src/: trust.rs
crates/codegen/xai-hunk-tracker/: Cargo.toml
crates/codegen/xai-mixpanel/: Cargo.toml
crates/codegen/xai-ratatui-inline/: Cargo.toml
crates/codegen/xai-ratatui-inline/src/: tests.rs
crates/codegen/xai-token-estimation/src/: lib.rs
crates/codegen/xai-tty-utils/src/: lib.rs
docs/: git-workflow.md  upstream-history.md  upstream-import-log.md  upstream-onto-log.md
docs/dev/research/: plan-prevent-auto-compact-regression.md  rca-auto-compact-early-fire.md
packaging/aur/: README.md
packaging/aur/grok-oss-git/: .SRCINFO  PKGBUILD
scripts/: detect-upstream-export.sh  import-upstream-export.sh  join-main-into-onto.sh  put-history-on-xai.sh  replay-onto-upstream.sh  sync-upstream.sh
(+155 files in other folders)
