[package]
license = "Apache-2.0"
name = "xai-grok-env"
version = "0.1.0"
edition.workspace = true
description = "Backend environment presets for the Grok CLI crate family: endpoint URL defaults and env-var test support."

[features]
# Exposes `EnvVarGuard` (and its process-wide env lock) to downstream
# crates' test targets. `cfg(test)` alone does not enable this for dependents.
test-support = []
# Bazel CI shared rlib: compile test helpers into the default library.
default-bazel = ["test-support"]

[dependencies]
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
